@@ -25,6 +25,8 @@ base_cgi = /monitorix-cgi
 	user = nobody
 	group = nobody
 	log_file = /var/log/monitorix-httpd
+	hosts_deny =
+	hosts_allow =
 	<auth>
 		enabled = n
 		msg = Monitorix: Restricted access
